Added quests: `Never Too Late To Learn`, `Get a Foothold`, `Profit Retention`, `A Life Lesson`, `Consolation Prize` Updated `Thirsty - Secrets`

--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/global/hu.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/global/hu.json
@@ -17956,7 +17956,7 @@
   "QuestCondition/Counter/PlayerTeam/Match/NowPointCaptured/MoreOrEqual{0}": " while holding {0} or more objectives at the end of the match",
   "QuestCondition/Counter/PlayerTeam/Spawn/NowPointCaptured/Equal{0}": " while having {0} objective(s) captured",
   "QuestCondition/Counter/PlayerTeam/Spawn/NowPointCaptured/MoreOrEqual{0}": " while having {0} or more objectives captured",
-  "QuestCondition/Elimination": "Eliminate{kill}{zone}",
+  "QuestCondition/Elimination": "Eliminate{kill}{zone}{enemyPreset}{playerPreset}{resetOnSessionEnd}",
   "QuestCondition/Elimination/Kill": " {target}{botrole}{bodypart}{distance}{weapon}{weapontype}{onesession}",
   "QuestCondition/Elimination/Kill/BodyPart": " with a {0} shot",
   "QuestCondition/Elimination/Kill/BodyPart/Chest": "thorax",
@@ -18942,7 +18942,7 @@
   "Transit/AccessNotGranted": "Access denied",
   "Transit/InactivePoint": "Transit unavailable",
   "Transit/Interaction": "Interact",
-  "Transit/LONG_TAP_TO_INTERACT": "You are in the transition zone, press \"interact\" to activate the transition",
+  "Transit/LONG_TAP_TO_INTERACT": "You are in the transition zone. Hold \"interact\" to activate the transition.",
   "Transition in ": "Transition in ",
   "Transition in {0:F1}": "Transition in {0:F1}",
   "Tremor": "Remegés",
