--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/en.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/en.json
@@ -6,6 +6,7 @@
   "baseclass-item_not_found_failed": "Item %s still not found in base cache after regeneration",
   "baseclass-missing_db_no_cache": "Database was empty, unable to generate an item base cache",
   "bleeding_edge_build": "BLEEDINGEDGE",
+  "btr-unable_to_find_items_in_dialog_template": "Unable to find itemsDelivered in dialogueTemplates for player: %s",
   "bot-bot-cache_has_zero_bots_of_requested_type": "WARNING - Bot cache does not have a pre-generated bot of type %s, will need to be generated, configure the bot.json config property (presetBatch) to be higher",
   "bot-bot_preset_count_value_missing": "Unable to find a preset count to generate for bot: %s, defaulting to 30",
   "bot-compatibility_check_missing_props": "Unable to validate item: {{id}} {{name}} in slot: {{slot}} can be equipped, it is missing a _props value",
@@ -56,6 +57,7 @@
   "bot-weapon_missing_mod_slot": "Slot: {{modSlot}} does not exist for weapon: {{weaponId}} {{weaponName}} on {{botRole}}",
   "bot-weapons_required_slot_missing_item": "Required slot '{{modSlot}}' on {{modName}} {{slotId}} was empty on {{botRole}}",
   "build-unable_to_delete_preset": "Unable to delete preset, cannot find %s in weapon, equipment or magazine presets",
+  "cultistcircle-unable_to_find_stash_id": "Unable to find cultist circle stash ID inside inventory [HideoutAreaStashes]! No rewards were generated",
   "chat-unable_to_register_command_already_registered": "Unable to register already registered command: %s",
   "client_request": "[Client Request] %s",
   "client_request_ip": "[Client Request] {{ip}} {{url}}",
@@ -79,6 +81,7 @@
   "fence-unable_to_find_assort_by_id": "Unable to find fence assort for id: %s",
   "fence-unable_to_find_offer_by_id": "Unable to find offer with id: %s",
   "fence-unable_to_get_ammo_penetration_value": "No penetration value found for Ammo: %s, Unable to check if its above penetration limit, assuming false",
+  "fence-unable_to_find_root_item_to_add": "Unable to add items to Fence as no root items were found",
   "fixer-clothing_item_found": "Clothing item: %s found in profile that does not exist in SPT. You WILL experience errors, this can be due to using a clothing mod and removing the mod with your character still wearing it. DO NOT USE THIS PROFILE. Open SPT_Data\\Server\\configs\\core.json, edit 'removeModItemsFromProfile' to be true. This will allow the server to edit your profile and hopefully remove the missing clothing",
   "fixer-mod_item_found": "Item: %s found in profile that does not exist in items db. You WILL experience errors, this can be due to using an items mod and removing the mod without deleting the modded items from your inventory. DO NOT USE THIS PROFILE. Open SPT_Data\\Server\\configs\\core.json, edit 'removeModItemsFromProfile' to be true. This will allow the server to edit your profile and hopefully remove the bad items",
   "fixer-trader_found": "Trader: %s found in profile but does not exist in SPT. You WILL experience errors, this can be due to using an trader mod and removing the mod without deleting the messages from said trader. DO NOT USE THIS PROFILE. Open SPT_Data\\Server\\configs\\core.json, edit 'removeModItemsFromProfile' and `removeInvalidTradersFromProfile` to be true. This will allow the server to edit your profile and hopefully remove the bad messages",
@@ -92,6 +95,7 @@
   "hideout-missing_recipe_for_area": "Could not find recipe: %s for area type",
   "hideout-missing_recipe_in_db": "Failed to locate recipe with _id: %s",
   "hideout-no_bitcoins_to_collect": "No bitcoins are ready for pickup",
+  "hideout-bitcoin_craft_missing": "Bitcoin farm craft was not found, unable to update time spent crafting",
   "hideout-unable_to_apply_stashsize_bonus_no_stash_found": "Unable to apply StashSize bonus, stash with id: %s not found in profile",
   "hideout-unable_to_find_area": "Unable to find hideout area: %s in profile",
   "hideout-unable_to_find_area_in_database": "Unable to find area: %s in database",
@@ -601,6 +605,8 @@
   "quest-unable_to_find_repeatable_to_replace": "Unable to find repeatable quest in profile to replace, skipping",
   "quest-unable_to_find_trader_in_profile": "Unable to find trader: %s in profile",
   "quest-unable_to_remove_scav_quest_from_profile": "Unable to remove scav quest: {{questIdToRemove}} from profile: {{profileId}}",
+  "quest-repeatable_generation_failed_please_report": "Repeatable quest failed to generate after %s attempts. This should never happen. Please report",
+  "quest-repeatable_elimination_generation_failed_please_report": "Unable to generate a repeatable Elimination quest. No locations found. Please report",
   "ragfair-invalid_player_offer_request": "Unable to place offer, request is invalid",
   "ragfair-item_not_in_db_unable_to_generate_dynamic_stack_count": "Item with tpl: %s not found in db. Unable to generate a dynamic stack count",
   "ragfair-missing_barter_scheme": "generateFleaOffersForTrader() Failed to find barterScheme for item id: {{itemId}} tpl: {{tpl}} on {{name}}",
@@ -689,6 +695,9 @@
   "server_start_player_active_botreload_skill": "Your character has the 'BotReload' skill active, this will cause your guns to reload unnaturally fast, ignore this message if this is intended",
   "server_start_success": "Server has started, happy playing",
   "started_webserver_success": "Started webserver at %s",
+  "weightedrandomhelper-supplied_items_empty": "WeightedRandom() was given 0 items, unable to choose a random weight",
+  "weightedrandomhelper-supplied_weights_empty": "WeightedRandom() was given 0 weights, unable to choose a random weight",
+  "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() was given {{itemCount}} items and {{weightCount}} weights, unable to choose a random weight",
   "trader-missing_durability_threshold_value": "Unable to find durability threshold value for trader: {{traderId}}, falling back to default of: {{value}}",
   "trader-missing_repair_property_using_default": "Trader {{traderId}} {{nickname}} is missing a repair object, adding in default values",
   "trader-missing_repair_quality_property_using_default": "Trader: {{traderId}} {{nickname}} is missing a repair quality property, adding in default value",
@@ -700,6 +709,9 @@
   "trader-unable_to_find_trader_by_id": "Unable to find trader with Id: %s",
   "trader-unable_to_find_trader_in_enum": "Unable to find trader: %s in Traders enum",
   "trader-unable_to_purchase_item_limit_reached": "Unable to purchase item from trader: {{traderId}} as their purchase limit of: {{limit}} has been reached",
+  "trader-unable_to_find_selltotrader_counter": "Unable to find [sellToTrader] counter for: %s quest in db, counter will not be incremented",
+  "trader-unable_to_find_inventory_item_for_selltotrader_counter": "Unable to find inventory item: %s to sell, cannot increment counter, skipping",
+  "trader-unable_to_add_custom_trader": "Unable to add custom trader: {{traderId}}, {{stackTrace}}",
   "unhandled_response": "[UNHANDLED][%s]",
   "unknown_request": "Unknown request!",
   "validation_error_decode": "Unable to decode checks.dat. File validation skipped.",
@@ -732,5 +744,6 @@
   "chatbot-added_stash_rows_please_restart": "Added 2 rows to stash, please restart your game to see them",
   "chatbot-snow_enabled": "Snow is enabled for all subsequent raids until the server is restarted",
   "chatbot-summer_enabled": "Summer has been enabled for all subsequent raids until the server is restarted",
+  "chatbot-command_was_empty": "Your typed command was empty, unable to process",
   "webserver_already_running": "Another copy of the webserver is already running. Please shut it down before starting a new one."
 }
