--- a/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/en.json
+++ b/Libraries/SPTarkov.Server.Assets/Assets/database/locales/server/en.json
@@ -58,6 +58,7 @@
   "bot-weapons_required_slot_missing_item": "Required slot '{{modSlot}}' on {{modName}} {{slotId}} was empty on {{botRole}}",
   "build-unable_to_delete_preset": "Unable to delete preset, cannot find %s in weapon, equipment or magazine presets",
   "cultistcircle-unable_to_find_stash_id": "Unable to find cultist circle stash ID inside inventory [HideoutAreaStashes]! No rewards were generated",
+  "cultistcircle-no_matching_threshhold_found": "Unable to find matching cultist circle threshold value that matches rouble amount: ({{rewardAmountRoubles}}), using fallback of 12 hour craft time",
   "chat-unable_to_register_command_already_registered": "Unable to register already registered command: %s",
   "client_request": "[Client Request] %s",
   "client_request_ip": "[Client Request] {{ip}} {{url}}",
@@ -189,6 +190,8 @@
   "loot-default_preset_not_found_using_random": "Default preset for weapon: %s not found, choosing random of same weapon type instead",
   "loot-item_missing_parentid": "Item: %s lacks a parentId value, unable to use item as loot",
   "loot-non_item_picked_as_sealed_weapon_crate_reward": "Invalid weapon: %s, was picked as reward for sealed weapon crate, unable to create loot",
+  "loot-preset_pool_is_empty": "Unable to find random preset in the given pool as it is empty, skipping",
+  "loot-chosen_preset_missing_encyclopedia_value": "Chosen preset: %s lacks encyclopedia property, skipping",
   "mail-unable_to_find_message_sender_by_id": "Unable to find mail message sender with id: %s",
   "mail-unable_to_give_gift_not_handled": "Unable to give player gift using reward code: %s it is not handled by server",
   "mailsend-missing_npc_dialog": "Unable to send message from: %s to player. A Dialog object for them does not exist",
@@ -631,6 +634,7 @@
   "ragfair-unable_to_remove_offer_doesnt_exist": "Unable to remove offer with id: %s as it cannot be found in flea market",
   "ragfair-unable_to_remove_offer_not_found_in_profile": "Unable to find offer: {{offerId}} in profile: {{profileId}} as offer is undefined, creating",
   "ragfair-generating_offers": "Generating flea offers...",
+  "ragfair-offer_page_doesnt_exist": "The current flag page no longer exists, showing end of offers list",
   "release-beta-disclaimer": "By pressing OK you agree that no support is offered and that this is for bug testing only. NOT actual gameplay. Mods are disabled. New profiles may be required frequently. Report all bugs in the reports channel in discord, or on the issues page on the website. If you don't press OK by the time specified, the game will close.",
   "release-beta-disclaimer-accept": "User accepted the beta disclaimer",
   "release-beta-disclaimer-mods-enabled": "By pressing OK you agree that no support is offered and that this is for bug testing only. NOT actual gameplay. Mods are enabled, do NOT report issues with mods. Do NOT ask mod authors for updated mods. Report all bugs in the reports channel in discord, or on the issues page on the website. If you dont press OK by the time specificed, the game will close.",
@@ -695,6 +699,7 @@
   "server_start_player_active_botreload_skill": "Your character has the 'BotReload' skill active, this will cause your guns to reload unnaturally fast, ignore this message if this is intended",
   "server_start_success": "Server has started, happy playing",
   "started_webserver_success": "Started webserver at %s",
+  "scavcase-no_cartridges_found_matching_price": "Unable to get a list of ammo that matches desired criteria for scav case reward",
   "weightedrandomhelper-supplied_items_empty": "WeightedRandom() was given 0 items, unable to choose a random weight",
   "weightedrandomhelper-supplied_weights_empty": "WeightedRandom() was given 0 weights, unable to choose a random weight",
   "weightedrandomhelper-supplied_data_doesnt_match": "WeightedRandom() was given {{itemCount}} items and {{weightCount}} weights, unable to choose a random weight",
